client/src/screens/Daydetails/Daydetails.css
.day-details-wrapper {
  /* padding: 1rem; */
  padding: 5rem;
  display: flex;
  align-items: start;
  justify-content: center;
  flex-direction: column;
  position: relative;
  color: white;
  overflow-x: hidden;
  animation: fadeIn 0.5s linear forwards;
}

.day-details-wrapper .behind-banner {
  z-index: -1;
  position: absolute;
  top: 10%;
  height: 100vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  mask-image: linear-gradient(to bottom, transparent, black 50%, transparent);
}

.day-details-wrapper .hatchline-banner {
  background: url("/assets/imgs/hatch_lines.webp");
  z-index: -1;
  position: absolute;
  right: -20rem;
  top: 2rem;
  height: 100vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-size: contain;
}

.day-details-wrapper .tonight-special {
  font-size: 6rem;
  font-weight: 900;
  position: absolute;
  text-align: right;
  width: 10ch;
  transform: rotate(90deg);
  top: 20rem;
  right: -10vw;
  z-index: 0;
  opacity: 0.4;
}

.day-details-wrapper .section-1,
.day-details-wrapper .section-2,
.day-details-wrapper .section-3,
.day-details-wrapper .section-5 {
  padding-top: 5rem;
  font-size: 1.5rem;
  line-height: 150%;
}

.day-details-wrapper .section-1,
.day-details-wrapper .section-2 {
  width: min(50ch, 100%);
}

.day-details-wrapper .section-3 {
  position: relative;
}

.day-details-wrapper .section-4 {
  display: flex;
  align-items: center;
  /* justify-content: center; */
  flex-wrap: wrap;
  width: 100%;
  margin-top: 2rem;
}

.day-details-wrapper .section-subhead {
  font-size: 3rem;
  color: white;
  font-family: "Sedgwick Ave Display", cursive;
  padding-bottom: 2rem;
}

@media only screen and (max-width: 700px) {
  .day-details-wrapper .section-1,
  .day-details-wrapper .section-2,
  .day-details-wrapper .section-3 {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
  }

  .day-details-wrapper {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 8rem;
  }

  .day-details-wrapper .section-head {
    flex-direction: column;
    align-items: center;
    gap: 0;
  }

  .day-details-wrapper .section-head .full-date {
    flex-direction: row;
    align-items: last baseline;
  }

  .day-details-wrapper .behind-banner,
  .hatchline-banner {
    left: 0;
  }

  .day-details-wrapper .tonight-special {
    display: none;
  }
}

@media only screen and (max-width: 370px){
  .day-details-wrapper {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

